css/style.css
/* ... */
.intro-game .characters
{
  display: flex;
  flex-direction: row;
  justify-content: center;
  position: relative;
  width: 100%;
  height: 50%;
  overflow: hidden;
}
.intro-game .characters div 
{
  display: flex;
  flex-direction: row;
  justify-content: center;
  position: relative;
  height: 100%;
  width: 18%;
}
.intro-game .characters img
{
  position: absolute;
  width: 220%;
}
.intro-game .text-box
{
  height: 45%;
  outline-style: dashed;
  outline-width: 4px;
  outline-color: var(--color-white);
  border-radius: var(--round-corners);
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}
.intro-game .text-box p 
{
  width: 90%;
  text-align: center;
  color: var(--color-white);
  font-size: var(--font-size-header );
}
.intro-game .button-container
{
  width: 100%;
  height: 7%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.intro-game .button-container button
{
  position: relative;
  height: 100%;
}
.intro-game .button-container button img
{
  position: relative;
  height: 100%;
}

/* UTILS -----------------------------------------------------------*/
.center {
  margin: auto;
  width: 50%;
  padding: 10px;
  text-align: center;
}
.button-clear 
{
  background: none;
  border: none;

  transform: scale(1.0);
  transition: .1s;
}
.button-clear:hover 
{
  transform: scale(1.08);
  cursor: pointer;
}
/* ANIMATIONS DEFS --------------------------------------------------------*/

@keyframes appearScale{
  from {
    transform: scale(0, 0);
  }
  to {
    transform: scale(1, 1);
  }
}
@keyframes slide {
  /* Start position */
  from {
    left: 0;
    transform: translateX(0);
  }
  /* End position */
  to {
    /* Moves the left edge to the rightmost side of the parent */
    left: 100%;
    /* Pulls the element back by its own full width, so it stays inside the parent's boundary */
    transform: translateX(-100%); 
  }
}

.cat-avatar .characterBackground
{
  background-color: var(--color-orange) !important;
}
.cat-avatar img
{
  left: -49% !important;
  top: 5% !important;
  width: 190% !important;
}
.pato-avatar .characterBackground
{
  background-color: var(--color-yellow) !important;
}
.pato-avatar img
{
  left: -37% !important;
  top: -15% !important;
  width: 165% !important;
}
.dog-avatar .characterBackground
{
  background-color: var(--color-blue) !important;
}
.dog-avatar img
{
  left: -30% !important;
  top: 5% !important;
  width: 170% !important;
}

.cat-answer img
{
  position: relative;
  height: 100%;
  top: 0px;
}
.pato-answer img
{
  position: relative;
  height: 100%;
  top: -6%;
}

.settings-popup
{
  width: 70%;
  height: 50%;
  background-color: var(--color-olive);
  border-radius: var(--round-corners);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 7%;
}


/*SLIDER----------------------------------------------------------------
/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  aspect-ratio: 3;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider 
{
  position: absolute;
  cursor: pointer;

  display: flex;
  flex-direction: row;
  align-items: center;

  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 1000px;
  background-color: var(--color-white);

  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before 
{
  position: absolute;
  content: "";
  height: 100%;
  aspect-ratio: 1;

  background-color: var(--color-orange);

  border-radius: 1000px;

  -webkit-transition: .4s;
  transition: .4s;
}

.slider img
{
  position: relative;
  height: 75%;
  z-index: 1;
  left: 4%;
  transform: translateX(0%);

  -webkit-transition: .4s;
  transition: .4s;
}
input:checked + .slider img 
{
  transform: translateX(270%);
}

input:checked + .slider {
  background-color: var(--color-green);
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(200%);
  -ms-transform: translateX(200%);
  transform: translateX(200%);
}

